# pv_geom

./: .gitignore  HANDOFF.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
configs/: coiled.yaml  default.yaml  phoenix.yaml
docs/: pv_geom_PRD.md
scripts/: _aerial.py  _bench_1k.py  _build_coiled_env.py  _coiled_aws_probe.py  _coiled_bench_1k.py  _coiled_smoke.py  spike.py  spike_roof.py  spike_validate.py
scripts/eda_outputs/: spike_batch.csv  spike_size_sweep_21_840480_397710__0.csv
src/pv_geom/: __init__.py  cli.py  coiled_env.py  config.py  provenance.py  quality.py  schema.py
src/pv_geom/classify/: interface.py  rules.py
src/pv_geom/geometry/: heights.py  multi_plane.py  plane_fit.py  roof_plane.py
src/pv_geom/io/: _localize.py  footprints.py  lidar.py  polygons.py  tile_index.py
src/pv_geom/pipeline/: partition.py  runner.py  tile_task.py
src/pv_geom/utils/: crs.py  logging.py
tests/integration/: test_phoenix_subset.py
tests/unit/: test_config.py  test_footprints_io.py  test_heights.py  test_lidar_io.py  test_multi_plane.py  test_partition.py  test_plane_fit.py  test_polygons_io.py  test_quality.py  test_roof_plane.py  test_rules.py  test_runner_smoke.py  test_schema.py  test_tile_index_io.py
